minor styling tweaks, need to sit down tonight and plan some of the models, ect

--- a/src/app/feed/feed.component.scss
+++ b/src/app/feed/feed.component.scss
@@ -8,6 +8,7 @@
     margin-bottom: 15px;
 }
 
-.post-title {
-    color: $background-blue;
+.post-body {
+    font-family: $header-font;
+    font-weight: 300;
 }
