--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,9 @@
 <div class="landing__content">
   <h1>What is this?</h1>
-  <p>Crabfinder is a social media platform for fictonal crabs.</p>
+  <p class="landing-description">Crabfinder is a social media platform for fictional crabs. It's not complete, so feel free to keep an eye out for updates.</p>
+</div>
+
+<div class="landing__content">
+  <h1>Why?</h1>
+    <p class="landing-description">Because it sounded like a good idea at the time!</p>
 </div>
