--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,4 +1,11 @@
+@import '../../assets/css/variables';
+
 .landing__content {
     text-align: center;
     margin: 3rem 0 0 0;
+}
+
+.landing-description {
+    font-family: $header-font;
+    font-weight: 300;
 }
